Switch to preprocessing to allow for better handling of line-internal text

--- a/demo.html
+++ b/demo.html
@@ -18,7 +18,7 @@ This is a poem by Zhu Wan, from the Tang Dynasty.
 <div lang="lzh" class="vertical poem">
 	朱灣<br/>
 	「九日登青山」<br/>
-	昔人<div>Test</div>惆悵地繫馬又登臨蒨處霞煙在多時草木深水將天一色雲與我無心想見龍山會良辰亦似今
+	昔人<div>test</div>惆悵地繫馬又登臨蒨處霞煙在多時草木深水將天一色雲與我無心想見龍山會良辰亦似今
 </div>
 
 
