--- a/demo.html
+++ b/demo.html
@@ -16,9 +16,9 @@
 This is a poem by Zhu Wan, from the Tang Dynasty.
 <br/>
 <div lang="lzh" class="vertical poem">
-	朱灣<br/>
-	「九日登青山」<br/>
-	昔人<div>test</div>惆悵地繫馬又登臨蒨處霞煙在多時草木深水將天一色雲與我無心想見龍山會良辰亦似今
+	朱灣<div lang="en">Author</div><br/>
+	「九日登青山」<div lang="en">Title</div>诗歌<br/>
+	昔<div lang="en">tes</div>人<div lang="en">te</div>惆<div lang="en">t</div>悵地繫馬又登臨蒨處<div lang="en">testing for purposes of import</div>霞煙在多時草木深水將天一色雲與我無心想見龍山會良辰亦似今
 </div>
 
 
@@ -44,5 +44,6 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 </body>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="verticaltext.js"></script>
 </html>
